# example-of-embedding-python-in-c-

./: CMakeLists.txt  README.md
include/: patchlevel.h
include/cpython/: pystats.h
python integration/include/: object.h  pymacro.h
python integration/include/cpython/: tracemalloc.h
python integration/scripts/: functions.py
src/: main.cpp
